# Kaztext

./: CMakeLists.txt  ChangeLog
debian/: changelog  control
src/: kaztext.cpp  kaztext.h
