CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(kaztext)

SET(CMAKE_INSTALL_PREFIX "/usr")

SET(kaztext_headers
	src/kaztext.h
)

SET(kaztext_src
	src/kaztext.cpp
)

FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} )
LINK_DIRECTORIES( ${OPENGL_LIBRARY_DIRS} )

LINK_LIBRARIES(
	${OPENGL_LIBRARY}
	${FREETYPE_LIBRARY}
)

ADD_LIBRARY(kaztext STATIC ${kaztext_src})
INSTALL(TARGETS kaztext ARCHIVE DESTINATION lib)
INSTALL(FILES ${kaztext_headers} DESTINATION include/kaztext)

